try to fix dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -79,6 +79,10 @@ nav#site_navigation {
 nav#site_navigation a:link { color: #fff; }
 nav#site_navigation a:visited { color: #fff; }
 
+nav#TOC {
+    background-color: #fdf6e3;
+}
+
 footer { font-size: 80%; }
 
 div.page-nav { font-size: 80%; }
@@ -229,7 +233,7 @@ for details.
 
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: #a0a0a0;
+        background-color: #303742;
         color: #93a1a1;
     }
     main, footer {
